--- a/static/files/index.html
+++ b/static/files/index.html
@@ -1,7 +1,7 @@
 <html ng-app="app">
 
 <head>
-	<title ng-bind="state.Stats.Title">Cloud Torrent</title>
+	<title ng-bind="state.Stats.Title">iqclone Cloud</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="css/Lato/Lato.css">
 	<link rel="stylesheet" type="text/css" href="css/semantic.min.css">
@@ -57,12 +57,9 @@
 
 		<footer>
 			<div>
-				<span>github.com/
-					<a href="https://github.com/jpillora" target="_blank">jpillora</a>/
-					<a href="https://github.com/jpillora/cloud-torrent" target="_blank">cloud-torrent</a> version {{ state.Stats.Version }} - </span>
-				<span ng-if="numKeys(state.Users) > 1">{{ numKeys(state.Users) }} users connected - </span>
-				<span>
-					<a href="https://golang.org" target="_blank">Go</a> {{ state.Stats.Runtime }}
+				<span>Developed By Manasvi Dobariya / Pritesh Kakadiya
+					
+				<a href="https://golang.org" target="_blank">Go</a> {{ state.Stats.Runtime }}
 				</span>
 			</div>
 			<div>
